--- a/elemzes.html
+++ b/elemzes.html
@@ -25,7 +25,7 @@
         body { background: radial-gradient(circle at center, #0f172a 0%, #020617 100%); color: var(--text); font-family: 'Inter', sans-serif; margin: 0; overflow-x: hidden; }
         .container { max-width: 1400px; margin: 0 auto; padding: 20px; position: relative; }
 
-        /* --- VISSZA GOMB (JAVÍTOTT LINK) --- */
+        /* --- VISSZA GOMB --- */
         .back-btn {
             position: absolute; top: 20px; left: 20px; display: flex; align-items: center; gap: 10px;
             text-decoration: none; color: var(--neon-blue); font-family: 'Orbitron'; font-size: 11px;
@@ -49,21 +49,21 @@
         .team-box img { width: 100px; height: 100px; }
 
         .grid-layout { display: grid; grid-template-columns: 2.5fr 1fr; gap: 30px; }
-        @media (max-width: 1100px) { .grid-layout { grid-template-columns: 1fr; } }
-        .glass-panel { background: var(--glass); border: 1px solid var(--border); padding: 30px; border-radius: 28px; backdrop-filter: blur(15px); }
+        @media (max-width: 1100px) { .grid-layout { grid-template-columns: 1fr; } .back-btn { position: fixed; top: 10px; left: 10px; } }
+        .glass-panel { background: var(--glass); border: 1px solid var(--border); padding: 30px; border-radius: 28px; backdrop-filter: blur(15px); overflow-x: auto; }
 
         /* --- MOMENTUM --- */
         .momentum-wrap { height: 12px; background: rgba(0,0,0,0.5); border-radius: 20px; margin: 20px 0; overflow: hidden; border: 1px solid var(--border); }
         .momentum-fill { height: 100%; width: 0%; background: linear-gradient(90deg, var(--neon-blue), var(--neon-green)); transition: 1.5s ease; box-shadow: 0 0 15px var(--neon-blue); }
 
         /* --- TABELLA ÉS ZÓNÁK --- */
-        table { width: 100%; border-collapse: separate; border-spacing: 0 8px; }
+        table { width: 100%; border-collapse: separate; border-spacing: 0 8px; min-width: 800px; }
         td { padding: 12px; background: rgba(255,255,255,0.02); text-align: center; border-top: 1px solid var(--border); border-bottom: 1px solid var(--border); }
         .pos-col { border-left-width: 4px !important; border-left-style: solid !important; }
-        .zone-tag { font-size: 8px; font-family: 'Orbitron'; display: block; margin-bottom: 4px; font-weight: 900; }
+        .zone-tag { font-size: 8px; font-family: 'Orbitron'; display: block; margin-bottom: 4px; font-weight: 900; letter-spacing: 1px; }
         .pos-num-box { width: 30px; height: 30px; line-height: 30px; margin: 0 auto; background: #000; border-radius: 8px; font-weight: bold; font-family: 'Orbitron'; font-size: 12px; border: 1px solid transparent; }
         .highlight td { background: rgba(0, 255, 136, 0.08) !important; border-color: var(--neon-green) !important; }
-        .pts-bold { color: var(--neon-green); font-family: 'Orbitron'; font-weight: bold; }
+        .pts-bold { color: var(--neon-green); font-family: 'Orbitron'; font-weight: bold; font-size: 16px; }
 
         /* --- ODDS --- */
         .bookmaker-badge { font-family: 'Orbitron'; font-size: 9px; color: var(--neon-blue); background: rgba(14,165,233,0.1); padding: 4px 10px; border-radius: 4px; margin-bottom: 10px; display: inline-block; border: 1px solid var(--neon-blue); }
@@ -87,7 +87,7 @@
             <h3 id="momentum-title" style="font-family:'Orbitron'; color:var(--neon-blue); margin:0;">MATCH MOMENTUM</h3>
             <div class="momentum-wrap"><div class="momentum-fill" id="momentum-bar"></div></div>
             <h3 style="font-family:'Orbitron'; margin-top:40px;">LIVE STANDINGS</h3>
-            <div id="standings-target"></div>
+            <div id="standings-target">Adatok betöltése...</div>
         </div>
         <div class="right-col">
             <div class="glass-panel">
@@ -120,7 +120,7 @@
         if (text.includes("Champions League")) return "BL";
         if (text.includes("Europa League")) return "EL";
         if (text.includes("Conference League")) return "KL";
-        if (text.includes("Relegation")) return "KIESŐ";
+        if (text.includes("Relegation") || text.includes("kiesés")) return "KIESŐ";
         if (text.includes("Osztályozó") || text.includes("Play-off")) return "P.OFF";
         return "ZÓNA";
     }
@@ -140,7 +140,7 @@
             updateMomentum(match.status, match.utcDate);
             loadStandings(match.competition.code, match.homeTeam.name, match.awayTeam.name);
             loadOdds(match.homeTeam.name, match.awayTeam.name);
-        } catch (e) {}
+        } catch (e) { console.error(e); }
     }
 
     function updateMomentum(status, utcDate) {
@@ -174,11 +174,7 @@
                 const dO = outcomes.find(x => x.name === 'Draw').price;
 
                 const total = (1/hO) + (1/aO) + (1/dO);
-                const hP = Math.round((1/hO)/total*100);
-                const dP = Math.round((1/dO)/total*100);
-                const aP = Math.round((1/aO)/total*100);
-
-                updateChart(hP, dP, aP);
+                updateChart(Math.round((1/hO)/total*100), Math.round((1/dO)/total*100), Math.round((1/aO)/total*100));
 
                 document.getElementById('odds-target').innerHTML = `
                     <div class="bookmaker-badge">OFFER BY: ${bookie.title.toUpperCase()}</div>
@@ -203,21 +199,51 @@
         try {
             const res = await fetch(`/api/standings/${code}`);
             const data = await res.json();
-            const table = data.standings.find(s => s.type === 'TOTAL').table;
-            const totalTeams = table.length;
+            const tableData = data.standings.find(s => s.type === 'TOTAL').table;
+            const total = tableData.length;
 
-            let html = `<table><thead><tr><th>#</th><th style="text-align:left">TEAM</th><th>MP</th><th>GD</th><th class="pts-bold">P</th></tr></thead><tbody>`;
+            let html = `<table><thead><tr><th>#</th><th style="text-align:left">CSAPAT</th><th>MP</th><th>GY</th><th>D</th><th>V</th><th>G</th><th>GK</th><th class="pts-bold">P</th></tr></thead><tbody>`;
 
-            table.forEach(r => {
+            tableData.forEach(r => {
                 let status = r.description || "";
                 const pos = r.position;
 
-                // Színezési logika kiegészítése ha az API nem küldi
-                if (!status) {
+                // --- MANUÁLIS LIGA LOGIKA ---
+                if (!status || status === "") {
                     if (['PL', 'PD', 'SA'].includes(code)) {
                         if (pos <= 4) status = "Champions League Group Stage";
                         else if (pos === 5) status = "Europa League Group Stage";
-                        else if (pos >= totalTeams - 2) status = "Relegation";
+                        else if (pos === 6) status = "Conference League Qualifiers";
+                        else if (pos >= total - 2) status = "Relegation";
+                    }
+                    else if (code === 'BL1') {
+                        if (pos <= 4) status = "Champions League Group Stage";
+                        else if (pos === 5) status = "Europa League Group Stage";
+                        else if (pos === 16) status = "Osztályozó";
+                        else if (pos >= 17) status = "Relegation";
+                    }
+                    else if (code === 'DED') { 
+                        if (pos <= 2) status = "Champions League Group Stage";
+                        else if (pos === 3) status = "Champions League Qualifiers";
+                        else if (pos === 4) status = "Europa League Qualifiers";
+                        else if (pos >= 5 && pos <= 8) status = "Conference League Play-offs";
+                        else if (pos === 16) status = "Osztályozó";
+                        else if (pos >= 17) status = "Relegation";
+                    }
+                    else if (code === 'PPL') {
+                        if (pos === 1) status = "Champions League Group Stage";
+                        else if (pos === 2) status = "Champions League Qualifiers";
+                        else if (pos === 3) status = "Europa League Qualifiers";
+                        else if (pos === 4) status = "Conference League Qualifiers";
+                        else if (pos === 16) status = "Osztályozó";
+                        else if (pos >= 17) status = "Relegation";
+                    }
+                    else if (code === 'FL1') {
+                        if (pos <= 3) status = "Champions League Group Stage";
+                        else if (pos === 4) status = "Champions League Qualifiers";
+                        else if (pos === 5) status = "Europa League Group Stage";
+                        else if (pos === 16) status = "Osztályozó";
+                        else if (pos >= 17) status = "Relegation";
                     }
                 }
 
@@ -227,16 +253,16 @@
                 html += `<tr class="${isMatchTeam ? 'highlight' : ''}">
                     <td class="pos-col" style="border-left-color: ${color}">
                         ${status ? `<span class="zone-tag" style="color:${color}">${translateStatus(status)}</span>` : ''}
-                        <div class="pos-num-box" style="background:${color!=='transparent'?color:'#000'}; color:${color!=='transparent'?'#000':'var(--neon-blue)'}; border-color:${color!=='transparent'?'rgba(255,255,255,0.3)':'var(--neon-blue)'}">${pos}</div>
+                        <div class="pos-num-box" style="background:${color!=='transparent'?color:'#000'}; color:${color!=='transparent'?'#000':'var(--neon-blue)'}; border-color:${color!=='transparent'?'rgba(255,255,255,0.2)':'var(--neon-blue)'}">${pos}</div>
                     </td>
                     <td style="text-align:left; font-weight:800;"><img src="${r.team.crest}" width="20" style="margin-right:8px; vertical-align:middle;"> ${r.team.name}</td>
-                    <td>${r.playedGames}</td>
-                    <td style="color:${r.goalDifference >= 0 ? 'var(--neon-green)' : 'var(--neon-red)'}">${r.goalDifference}</td>
+                    <td>${r.playedGames}</td><td>${r.won}</td><td>${r.draw}</td><td>${r.lost}</td><td>${r.goalsFor}:${r.goalsAgainst}</td>
+                    <td style="color:${r.goalDifference >= 0 ? 'var(--neon-green)' : 'var(--neon-red)'}">${r.goalDifference > 0 ? '+'+r.goalDifference : r.goalDifference}</td>
                     <td class="pts-bold">${r.points}</td>
                 </tr>`;
             });
             document.getElementById('standings-target').innerHTML = html + "</tbody></table>";
-        } catch (e) {}
+        } catch (e) { console.error(e); }
     }
 
     init();
