--- a/elemzes.html
+++ b/elemzes.html
@@ -146,8 +146,7 @@
             <div class="momentum-wrap"><div class="momentum-fill" id="momentum-bar"></div></div>
             
             <h3 style="font-family:'Orbitron'; margin-top:30px; font-size: 13px; border-left: 3px solid var(--neon-green); padding-left: 10px;">LIVE LEAGUE TABLE</h3>
-            <div class="table-responsive" id="standings-target">Adatok betöltése...</div>
-        </div><div class="table-responsive" id="standings-target"></div>
+        </div><div class="table-responsive" id="standings-target">Adatok betöltése...</div>
 
 <div class="legend-container">
     <div class="legend-item">
@@ -349,4 +348,5 @@
 </script>
 </body>
 </html>
+
 
