--- a/meccsek.html
+++ b/meccsek.html
@@ -285,7 +285,7 @@
                     let status = r.description || "";
                     let pos = r.position;
 
-                    if (!status || status === "") {
+                   if (!status || status === "") {
                         if (['PL', 'PD', 'SA'].includes(code)) {
                             if (pos <= 4) status = "Champions League";
                             else if (pos === 5) status = "Europa League";
@@ -296,8 +296,25 @@
                             else if (pos === 5) status = "Europa League";
                             else if (pos === 16) status = "Osztályozó";
                             else if (pos >= 17) status = "Relegation";
+                        } else if (code === 'DED') { 
+                            if (pos <= 2) status = "Champions League";
+                            else if (pos === 3) status = "Champions League Q";
+                            else if (pos === 4) status = "Europa League Q";
+                            else if (pos >= 5 && pos <= 8) status = "Conference Play-offs";
+                            else if (pos === 16) status = "Osztályozó";
+                            else if (pos >= 17) status = "Relegation";
+                        } else if (code === 'PPL') {
+                            if (pos === 1) status = "Champions League";
+                            else if (pos === 2) status = "Champions League Q";
+                            else if (pos === 3) status = "Europa League Q";
+                            else if (pos === 16) status = "Osztályozó";
+                            else if (pos >= 17) status = "Relegation";
+                        } else if (code === 'ELC') {
+                            if (pos <= 2) status = "Feljutás";
+                            else if (pos <= 6) status = "Play-off";
+                            else if (pos >= total - 2) status = "Relegation";
                         }
-                    }
+                    } 
 
                     const color = getStatusColor(status);
                     const isTarget = r.team.id == teamId;
@@ -380,3 +397,4 @@
     </script>
 </body>
 </html>
+
